[package]
name = "isEven"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Returns true if the number is even"
homepage = "https://github.com/r0g3r0g3r"
readme = "README.md"
repository = "https://github.com/r0g3r0g3r/is_even"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
